--- a/html2/css/style.css
+++ b/html2/css/style.css
@@ -1,4 +1,4 @@
 body {background-color: powderblue;}
-h1 {color: blue;}
-p {color: red;}
+h1 {color: rgb(255, 0, 106);}
+p {color: black;}
 td {border: 1px solid black; padding: 64px;} 
